[package]
name = "order_dependencies"
version = "0.1.0"
edition = "2021"

[dependencies]
cargo_toml = "0.20.2"
serde_json = "1.0.111"

[[bin]]
name = "order_dependencies"
path = "src/main_order_dependencies.rs"


[[bin]]
name = "search_unused_dependencies"
path = "src/main_search_unused_dependencies.rs"

